--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-NEXT_PUBLIC_API_DEFAULT=https://api.staging.chiline.ir
+NEXT_PUBLIC_API_DEFAULT=api
 NEXTAUTH_URL="http://localhost:8060"
 NEXTAUTH_SECRET="A*O&@#HOI@&UG29asdasdasdasdadassaadsh8y2jk!"
